Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-80629

QRhi Metal fails pipeline creation when shader code had warnings

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.14.1, 5.15.0 Alpha
    • 5.14, 5.15
    • Qt RHI
    • None
    • 7be4bbcbc51f198cd1e1b40adaf310a04422ac1e (qt/qtbase/5.14)

      The Metal implementation of QRhiGraphicsPipeline is way too strict when compiling shaders from source: compiler warnings should not be treated as compilation failures.

      Relevant for Quick 3D for instance, where the shader code may contain unused variables.

        For Gerrit Dashboard: QTBUG-80629
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            lagocs Laszlo Agocs
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes